# IDEAHACK2024

./: .gitignore  README.md  bot.py  package-lock.json  pyproject.toml  vector_store.index
data/: businesses_toy_data.json  investors_toy_data.json  toy_user_data.json
example/: chat_bot.py  populate_db.py  test.py
example/natural_language_filter/: temp.py  test.py
example/project/: test.py
example/virtual_sibling/: create_db.py
frontend/: dependencies.json  package-lock.json  package.json  tailwind.config.js
frontend/public/: marketing_business_startup_research_investing_skills.json
frontend/src/: App.js  Chat.css
frontend/src/assets/: filters.json
frontend/src/components/: BookSlicer.jsx  Chat.jsx  Login.jsx  NavBar.jsx  Row.jsx  Search.jsx  Signup.jsx  UserChat.jsx  userSettings.jsx
frontend/src/pages/: HomeS.jsx  HomeSData.jsx  UserProfile.jsx
frontend/src/utilis/: Auth.jsx  PrivateRoute.js
frontend/utilis/: Auth.jsx  PrivateRoute.js
ideahack/: profile_store.py
ideahack/backend/: filters.json  g_slides.json  metadata.db  vector_store.index
ideahack/backend/backend/: settings.py  urls.py
ideahack/backend/backend_utils/: views_utils.py
ideahack/backend/base/: admin.py  apps.py  models.py  serializer.py  urls.py  views.py
ideahack/backend/base/migrations/: 0001_initial.py  0002_alter_company_link_alter_posistion_link_and_more.py  0002_alter_company_projects.py  0002_user_surname.py  0003_remove_user_surname.py
ideahack/backend/scripts/: check_db.py  populate_db.py
ideahack/nls/: search_engine.py  vector_store.py
ideahack/pdf_processing/: summarize_paper.py
ideahack/project/: generator.py
ideahack/recommendations/: __init__.py  models.py  prompts.py  recommend_person.py  recommend_project.py
ideahack/virtual_sibling/: interact.py
scripts/: single_recommendation.py
