[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ideahack-2024"
version = "0.0.1"
description = "IDEAHACK 2024"

requires-python = ">= 3.8, <= 3.12"

dependencies = [
    "numpy ~= 1.26.4",
    "pandas ~= 2.2.3",
    "langchain==0.3.7",
    "langchain-community==0.3.7",
    "langchain-core==0.3.19",
    "langchain-openai==0.2.8",
    "langchain-text-splitters==0.3.2",
    "langsmith==0.1.143",
    "ruff == 0.6.2",
    "streamlit==1.38.0",
    "transformers==4.46.2",
]


[tool.setuptools]
packages = ["ideahack"]